fixed map display on smaller screens

--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ footer {
     margin-left: 0 auto;
     margin-top: 90px;
     height: 400px;
+    aspect-ratio: 3 / 2;
     box-shadow: 0 4px 12px rgba(254, 0, 182, 0.2);
     border-radius: 10px;
     overflow: hidden;
@@ -466,7 +467,9 @@ footer {
 
     .map {
         order: 1;
-        margin: 0 auto;
+        margin: 20px 0;
+        width: 400px;
+        height: 300px;
     }
 
     .contact-info {
